# personalprojectweb

./: main.py  pyproject.toml
data/: AAPL.npz  AMD.npz  AVGO.npz  CRM.npz  CSCO.npz  IBM.npz  MSFT.npz  NVDA.npz  ORCL.npz  PLTR.npz
